<resources>
    <string name="app_name">LFA</string>

    <string name="unit_id" translatable="false">ca-app-pub-2537333932314106~6678440077</string>
    <string name="test_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_unit_id" translatable="false">ca-app-pub-2537333932314106/8155173270</string>
    <string name="news_detail_unit_id" translatable="false">ca-app-pub-2537333932314106/5062106075</string>
    <string name="news_only_video_banner_unit_id" translatable="false">ca-app-pub-2537333932314106/2892212079</string>
    <string name="news_video_text_banner_unit_id" translatable="false">ca-app-pub-2537333932314106/8799144876</string>


    <string name="teams_intersticial_unit_id" translatable="false">ca-app-pub-2537333932314106/1829438076</string>
    <string name="teams_banner_unit_id" translatable="false">ca-app-pub-2537333932314106/3306171279</string>
    <string name="teams_detail_banner_unit_id" translatable="false">ca-app-pub-2537333932314106/4782904478</string>

    <string name="standings_unit_id" translatable="false">ca-app-pub-2537333932314106/1576061675</string>

    <string name="calendar_unit_id" translatable="false">ca-app-pub-2537333932314106/9099328478</string>

    <string name="empty" translatable="false"></string>
    <string name="empty_team_name">Name not found</string>
    <string name="empty_number_value" translatable="false">-</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="condors">Condors</string>
    <string name="eagles">Eagles</string>
    <string name="mayas">Mayas</string>
    <string name="raptors">Raptors</string>

    <string name="roster" translatable="false">Roster</string>

    <string name="action_settings">Settings</string>
    <string name="idioma_app">Language</string>
    <string name="ingles">English</string>
    <string name="selecciona_idioma">Choose language</string>
    <string name="top_stories">Top stories</string>
    <string name="teams">Teams</string>
    <string name="acerca_de">About...</string>
    <string name="acerca_de_info">This application is to take me out of the rat race because I\'m up to the mother!</string>
    <string name="espannol">Espa\u00F1ol</string>
    <string name="estadisticas">Statistics</string>
    <string name="home">Home</string>
    <string name="reglamento">Regulation</string>
    <string name="schedule">Schedule</string>
    <string name="standings">Standings</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="acerca_de_texto">Information and logos are informative content looking to promote Football in Mexico.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_detalle_equipos" translatable="false">DetalleEquipos</string>
    <string name="developed_by">Developed by:</string>
    <string name="rawr_studio" translatable="false">Rawr Studio</string>
    <string name="probando">Testing</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="construyendo">(In construction)</string>

    <string name="local">Local</string>
    <string name="visitante">Visitor</string>
    <string name="estatus_pendiente">P</string>
    <string name="sin_fecha">No Date Available</string>
    <string name="final_texto" translatable="false">final</string>
    <string name="jugando_texto">Playing</string>

    <string name="abreviature_number" translatable="false">No.</string>
    <string name="name_string">Name</string>

    <string name="position_string">Pos</string>

    <string name="height_string">Height</string>

    <string name="weight_string">Weight</string>


</resources>
