<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <TableRow>

            <TextView
                android:id="@+id/tvEquipoLocal"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/local"
                android:textAlignment="viewEnd"
                android:textColor="@color/blanco"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvEstatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/estatus_pendiente"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvEquipoVisitante"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visitante"
                android:textAlignment="textStart"
                android:textColor="@color/blanco"
                android:textSize="22dp" />

        </TableRow>

        <TableRow android:paddingTop="4dp">

            <TextView
                android:id="@+id/tvFechaPartido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sin_fecha"
                android:textAlignment="center"
                android:textColor="@color/blanco" />
        </TableRow>

    </TableLayout>

</LinearLayout>