<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde_logo_lfa_transparente"

        android:orientation="horizontal">

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/position_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/position_string"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/height_text"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height_string"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/weight_string"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:textSize="16dp" />
        </TableRow>


    </TableLayout>

</LinearLayout>