<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginTop="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/blanco"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/logo_equipo_visitante"
            android:src="@drawable/logo_lfa_sin_texto"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_column="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TableLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/logo_equipo_visitante"
            android:layout_toStartOf="@+id/logo_equipo_visitante"
            android:layout_toEndOf="@+id/logo_equipo_local">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/local"
                    android:id="@+id/tvEquipoLocal"
                    android:textSize="15sp"
                    android:textAlignment="gravity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/estatus_pendiente"
                    android:id="@+id/tvEstatus"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/visitante"
                    android:id="@+id/tvEquipoVisitante"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sin_fecha"
                    android:id="@+id/tvFechaPartido"
                    android:gravity="center"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/logo_equipo_local"
            android:src="@drawable/logo_lfa_sin_texto"
            android:layout_marginLeft="5dp"
            android:layout_column="11"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</android.support.v7.widget.CardView>